--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@clerk/nextjs": "^6.36.5",
     "@radix-ui/react-slot": "^1.2.4",
+    "@stream-io/node-sdk": "^0.7.30",
+    "@stream-io/video-react-sdk": "^1.30.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "convex": "^1.31.2",
