--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-slot": "^1.2.4",
+    "@radix-ui/react-switch": "^1.2.6",
     "@stream-io/node-sdk": "^0.7.30",
     "@stream-io/video-react-sdk": "^1.30.0",
     "class-variance-authority": "^0.7.1",
@@ -23,6 +24,7 @@
     "next-themes": "^0.4.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-hot-toast": "^2.6.0",
     "svix": "^1.82.0",
     "tailwind-merge": "^3.4.0"
   },
